# caminatas

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  test.py
app/: config.py  main.py
app/api/: client.py  pages.py
app/data/: data.py  walks.py
app/router/api/: main.py
app/services/: image_cycler.py
static/: input.css  output.css
static/styles/: globals.css  theme.css
templates/: base.jinja
templates/components/: btn_external.jinja  btn_icon.jinja  btn_link.jinja
templates/pages/: about.jinja  blog.jinja  categories.jinja  home.jinja  walks.jinja
templates/partials/: footer.jinja  header.jinja  mobile-modal.jinja
