[project]
name = "caminatas"
version = "0.1.0"
description = "Info-site for caminatas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "djlint>=1.36.4",
    "basedpyright>=1.29.4",
    "pytailwindcss>=0.2.0",
    "arel>=0.3.0",
]

[tool.djlint]
profile="jinja"
max_blank_lines=1
max_line_length=80
